--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
      -->
   </head>
   <body>
-    <h1>HELLO</h1>
+    <h1>Meteorite Landings</h1>
     <div id="status"></div>
     <img id="image-result" hidden>
     <div id="map"></div>
